# ZTB-Assets-Report

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  swagger.json
src/ztb_assets/: __init__.py  assets.py  auth.py  cli.py  client.py  config.py  html_report.py
